[gd_scene load_steps=2 format=3 uid="uid://brl0me0ik87pi"]

[ext_resource type="Script" uid="uid://b3mvdih2q2xhg" path="res://scenes/ui/tool_ui.gd" id="1_440vi"]

[node name="ToolUI" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_440vi")

[node name="ToolContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="SeedContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HideTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
